--- a/assets/styles/styles.scss
+++ b/assets/styles/styles.scss
@@ -18,7 +18,7 @@ body {
   width: rem(1920);
   background-color: #fff;
   overflow-x: hidden;
-  outline: red solid 1px;
+  // outline: red solid 1px;
 }
 
 .header {
@@ -305,11 +305,11 @@ body {
   }
 }
 
-.procedure-form {
+.procedure {
   display: flex;
   width: 100%;
 
-  .form-wrapper {
+  .procedure__wrapper {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -318,7 +318,7 @@ body {
     background-color: #1D1D1A;
     padding: rem(165) 0;
 
-    .form-title {
+    .procedure__title {
       display: flex;
       flex-direction: column;
       max-width: rem(521);
@@ -342,7 +342,7 @@ body {
       }
     }
 
-    form {
+    .procedure__form {
       display: flex;
       flex-direction: column;
       gap: rem(22);
@@ -363,6 +363,7 @@ body {
           font-size: rem(25);
 
           &::placeholder {
+            color: #504339;
             transition: .3s;
           }
 
@@ -398,7 +399,7 @@ body {
     }
   }
 
-  .procedure-promo {
+  .procedure__banner {
     position: relative;
     display: flex;
     background-image: url("../images/procedure-promo.png");
@@ -410,11 +411,10 @@ body {
       position: absolute;
       top: rem(70);
       left: rem(70);
-      width: rem(320);
+      width: 50%;
       height: rem(150);
     }
   }
-
 }
 
 .clients {
@@ -723,7 +723,7 @@ body {
       padding: 0 rem(25);
       background-image: url('../images/mobile-bg.png');
       background-repeat: no-repeat;
-      background-size: contain;
+      background-size: cover;
 
       .nav {
         .nav__logo {
@@ -806,8 +806,65 @@ body {
     display: none;
   }
 
-  .procedure-form {
-    // display: none;
+  .procedure {
+    flex-direction: column-reverse;
+
+    .procedure__wrapper {
+      width: 100%;
+      padding: rem(35) 0;
+
+      .procedure__title {
+
+        h2 {
+          margin: 0 auto;
+          font-size: rem(35);
+          text-align: center;
+          width: 80%;
+          line-height: 50px;
+          font-weight: 400;
+          letter-spacing: 4px;
+        }
+
+        h3 {
+          text-align: center;
+          font-size: rem(14);
+          text-transform: uppercase;
+          padding: 0 rem(15);
+        }
+      }
+    }
+
+    .procedure__form {
+      align-items: center;
+
+      label {
+        width: 78% !important;
+
+        input {
+        }
+      }
+
+      button {
+        width: 78% !important;
+      }
+    }
+
+
+    .procedure__banner {
+      width: 100%;
+      height: 600px;
+      position: relative;
+      background-image: url("../images/procedure-promo-mobile.png");
+      background-size: cover;
+
+      img {
+        position: absolute;
+        top: rem(26);
+        left: rem(20);
+        width: 138px;
+        height: auto;
+      }
+    }
   }
 
   .clients {
