--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -17,7 +17,7 @@ body {
   display: flex;
   flex-direction: column;
   margin: 0 auto;
-  width: 120rem;
+  width: 1920px;
   background-color: #fff;
   overflow-x: hidden;
 }
@@ -606,7 +606,7 @@ body {
 /* ---------------- MEDIA-QUERY ----------------- */
 @media only screen and (max-width: 430px) {
   body {
-    width: 26.875rem;
+    width: 100%;
   }
   .header {
     max-height: 59.3125rem;
