--- a/assets/styles/styles.scss
+++ b/assets/styles/styles.scss
@@ -7,6 +7,10 @@
   // outline: red solid 1px;
 }
 
+img {
+  max-width: 100%
+}
+
 a {
   text-decoration: none;
 }
@@ -18,6 +22,7 @@ body {
   width: 1920px;
   background-color: #fff;
   overflow-x: hidden;
+  // max-width: 1920px
   // outline: red solid 1px;
 }
 
@@ -773,6 +778,7 @@ body {
 
         .main__checkin {
           margin: 0;
+          width: auto;
 
           img {
             width: 110px;
