--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -9,10 +9,6 @@
   scroll-behavior: smooth;
 }
 
-img {
-  max-width: 100%;
-}
-
 a {
   text-decoration: none;
 }
@@ -478,118 +474,121 @@ body {
   width: 100%;
   background-color: #000000;
 }
-.footer-wrapper {
+.footer .footer__wrapper {
   display: flex;
   background-color: #D1AE8E;
   margin: 6.875rem 16.25rem;
 }
-.footer-wrapper .footer-logo {
+.footer .footer__wrapper .footer__logo {
   display: flex;
   flex-direction: column;
   padding-top: 4.0625rem;
   padding-left: 4.375rem;
 }
-.footer-wrapper .footer-logo span {
+.footer .footer__wrapper .footer__logo span {
   width: 15.625rem;
   color: #fff;
   font-size: 1rem;
 }
-.footer-wrapper .footer-menu {
+.footer .footer__wrapper .footer__menu {
   display: flex;
   flex-direction: column;
   margin-left: 5.625rem;
   margin-top: 6.0625rem;
 }
-.footer-wrapper .footer-menu h3 {
+.footer .footer__wrapper .footer__menu h3 {
   color: #fff;
   text-transform: uppercase;
   font-weight: 600;
   font-size: 1rem;
 }
-.footer-wrapper .footer-menu ul {
+.footer .footer__wrapper .footer__menu ul {
   display: flex;
   flex-direction: column;
   list-style: none;
   padding: 0;
   gap: 1.0625rem;
 }
-.footer-wrapper .footer-menu ul li a {
+.footer .footer__wrapper .footer__menu ul li a {
   color: #fff;
   font-weight: 500;
 }
-.footer-wrapper .footer-contacts {
+.footer .footer__wrapper .footer__contacts {
   display: flex;
   flex-direction: column;
   margin-left: 10rem;
   margin-top: 6.0625rem;
 }
-.footer-wrapper .footer-contacts h3 {
+.footer .footer__wrapper .footer__contacts h3 {
   color: #fff;
   text-transform: uppercase;
   font-weight: 600;
   font-size: 1rem;
 }
-.footer-wrapper .footer-contacts .contact-address {
+.footer .footer__wrapper .footer__contacts .footer__address {
   display: flex;
   flex-direction: column;
 }
-.footer-wrapper .footer-contacts .contact-address span {
+.footer .footer__wrapper .footer__contacts .footer__address span {
   color: #FFFFFF;
 }
-.footer-wrapper .footer-contacts .contact-address a {
+.footer .footer__wrapper .footer__contacts .footer__address a {
   padding-top: 0.625rem;
   color: #FFFFFF;
   text-decoration: underline;
 }
-.footer-wrapper .footer-contacts .contact-mail h4 {
+.footer .footer__wrapper .footer__contacts .footer__mail h4 {
   font-size: 0.75rem;
   color: #ffffff;
   font-weight: 500;
 }
-.footer-wrapper .footer-contacts .contact-mail a {
+.footer .footer__wrapper .footer__contacts .footer__mail a {
   color: #ffffff;
 }
-.footer-wrapper .footer-contacts .contact-social h4 {
+.footer .footer__wrapper .footer__contacts .footer__socials h4 {
   font-size: 0.75rem;
   color: #ffffff;
   font-weight: 500;
 }
-.footer-wrapper .footer-contacts .contact-social ul {
+.footer .footer__wrapper .footer__contacts .footer__socials ul {
   display: flex;
   list-style-type: none;
   padding: 0;
   gap: 0.9375rem;
 }
-.footer-wrapper .footer-phone {
+.footer .footer__wrapper .footer__phone {
   display: flex;
   flex-direction: column;
   margin-top: 8.125rem;
   margin-left: 4.375rem;
   margin-bottom: 8.75rem;
 }
-.footer-wrapper .footer-phone h3 {
+.footer .footer__wrapper .footer__phone h3 {
   font-size: 0.75rem;
   color: #FFFFFF;
   font-weight: 400;
   margin: 0;
 }
-.footer-wrapper .footer-phone span {
+.footer .footer__wrapper .footer__phone span {
   font-family: Kudryashev, sans-serif;
   font-size: 1.375rem;
   font-weight: 700;
   letter-spacing: 2px;
   color: #FFFFFF;
 }
-.footer-wrapper .footer-phone .tel-two {
+.footer .footer__wrapper .footer__phone .tel-two {
   padding-top: 1.0625rem;
 }
-.footer-wrapper .footer-phone a {
+.footer .footer__wrapper .footer__phone a {
   font-weight: 700;
   padding-top: 1.375rem;
   color: #FFFFFF;
-  text-decoration: underline;
 }
-.footer-copyrights {
+.footer .footer__wrapper .footer__phone .footer__callback {
+  width: fit-content;
+  border-bottom: 2px solid #DFC6B0;
+}
+.footer .footer__copyright {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -597,12 +596,12 @@ body {
   gap: 0.375rem;
   margin-bottom: 1.875rem;
 }
-.footer-copyrights span {
+.footer .footer__copyright span {
   color: #DCD5CE;
   font-size: 1rem;
   text-align: center;
 }
-.footer-copyrights .politics {
+.footer .footer__copyright .footer__politics {
   cursor: pointer;
   text-decoration: underline;
 }
@@ -724,7 +723,66 @@ body {
     display: none;
   }
   .footer {
+    background-color: #D1AE8E;
+  }
+  .footer .footer__wrapper {
+    flex-direction: column;
+    margin: 0;
+    background-color: #D1AE8E;
+  }
+  .footer .footer__wrapper .footer__logo {
     display: none;
+  }
+  .footer .footer__wrapper .footer__menu {
+    margin: 2.5rem 0 0;
+    align-items: center;
+  }
+  .footer .footer__wrapper .footer__menu ul {
+    align-items: center;
+  }
+  .footer .footer__wrapper .footer__contacts {
+    margin: 2.4375rem 0 0;
+    align-items: center;
+    gap: 0.8125rem;
+  }
+  .footer .footer__wrapper .footer__contacts h3 {
+    margin: 0;
+  }
+  .footer .footer__wrapper .footer__contacts .footer__address {
+    align-items: center;
+  }
+  .footer .footer__wrapper .footer__contacts .footer__mail {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .footer .footer__wrapper .footer__contacts .footer__socials {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 1.0625rem 0 0;
+  }
+  .footer .footer__wrapper .footer__contacts .footer__socials h4 {
+    margin: 0;
+  }
+  .footer .footer__wrapper .footer__phone {
+    margin: 1.75rem 0 2.1875rem;
+    align-items: center;
+  }
+  .footer .footer__wrapper .footer__phone a {
+    padding-top: 1.125rem;
+  }
+  .footer .footer__copyright {
+    color: #fff;
+    font-size: 0.875rem;
+  }
+  .footer .footer__copyright .footer__copyrights {
+    color: inherit;
+    font-size: inherit;
+  }
+  .footer .footer__copyright .footer__politics {
+    color: inherit;
+    font-size: inherit;
   }
 }
 
